--- a/dada/extras/documentation/pod_source/list_settings_described.pod
+++ b/dada/extras/documentation/pod_source/list_settings_described.pod
@@ -274,8 +274,8 @@ L<http://dadamailproject.com/d/features-public_and_private_lists.pod.html>
 
     # Create a Back Link prefs
 
-    website_name => '',
-    website_url  => '',
+    back_link_website_name => '',
+    back_link_website_url  => '',
 
     #SQL stuff
 
