--- a/dada/extras/documentation/pod_source/changes_11_x.pod
+++ b/dada/extras/documentation/pod_source/changes_11_x.pod
@@ -2,6 +2,18 @@
 
 =encoding utf-8
 
+=head1 11.1.3
+
+=head2 Bugfixes
+
+=head3 Template Tag Syntax Error Check Not Working in, Mass Mailing: Send a Message/Send a Webpage 
+
+L<https://github.com/justingit/dada-mail/issues/755>
+
+=head3 Custom Mass Mailing Layouts Have Email Themes CSS Embedded 
+
+L<https://github.com/justingit/dada-mail/issues/754>
+
 =head1 11.1.2
 
 =head2 Bugfixes
